Email is working

--- a/MySite/Views/Home/AboutMe.cshtml
+++ b/MySite/Views/Home/AboutMe.cshtml
@@ -47,7 +47,7 @@
                                 <li>C#</li>
                                 <li>Entity Framework, ADO.NET</li>                          
                                 <li>MVC, Web Forms, Web API</li>
-                                <li></li>
+                                <li>Windows Services</li>
                                 <li></li>
                             </ul>
                         </li>
