--- a/MySite/Views/Home/Projects.cshtml
+++ b/MySite/Views/Home/Projects.cshtml
@@ -9,7 +9,8 @@
             <div class="alert">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
                 Due to certain stipulations of my current employment, I'm unable to post source code for Beaverton School District apps. 
-                If you're interested in seeing code from one of these projects, we can set up a private walk-through. 
+                If you're interested in seeing code from one of these projects, click on the project tile and then click "Request source"
+                on the project dialog. 
             </div>
         </div>
     </div>
