--- a/MySite/Views/Home/AboutMe.cshtml
+++ b/MySite/Views/Home/AboutMe.cshtml
@@ -122,14 +122,9 @@
                 <h3>Experience</h3>
                 <div>
                     <p style="cursor:help" title="Systems Analyst in name only. I'm still a developer.">
-                        <b>Systems Analyst</b><br />
+                        <b>Developer</b><br />
                         Beaverton School District<br />
-                        October 2016 - Present
-                    </p>
-                    <p>
-                        <b>Programmer/Analyst</b><br />
-                        Beaverton School District<br />
-                        July 2014 - October 2016
+                        October 2014 - Present
                     </p>
                 </div>
                 <h3>Goals</h3>
