Fixed IE javascript bug.

--- a/MySite/Views/Home/Index.cshtml
+++ b/MySite/Views/Home/Index.cshtml
@@ -42,17 +42,17 @@
 
 </div>
 <script type="text/javascript">
-    $(document).ready(function(){
-        $('.img-carousel').slick({
-            autoplay: true,
-            autoplaySpeed: 3000,
-            mobileFirst: true,
-            //adaptiveHeight: true,
-            slidesToShow: 1,
-            centerMode: true,
-            variableWidth: true
-        });
-    });
+    //$(document).ready(function(){
+    //    $('.img-carousel').slick({
+    //        autoplay: true,
+    //        autoplaySpeed: 3000,
+    //        mobileFirst: true,
+    //        //adaptiveHeight: true,
+    //        slidesToShow: 1,
+    //        centerMode: true,
+    //        variableWidth: true
+    //    });
+    //});
 </script>
 
 
