--- a/MySite/Views/Shared/_Layout.cshtml
+++ b/MySite/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     @*<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>*@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-     
+
+    <script src="~/Scripts/jquery-3.2.1.js"></script>
    
 </head>
 <body>
