--- a/MySite/Views/Home/Projects.cshtml
+++ b/MySite/Views/Home/Projects.cshtml
@@ -88,12 +88,12 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    @*<div class="project-icon radius clickable" style="background-image: url('../Content/imgs/projects/sharepoint.png');">
-                        <input type="hidden" value="sp" />
+                    <div class="project-icon radius clickable" style="background-image: url('../Content/imgs/projects/search_icon.png');">
+                        <input type="hidden" value="rs" />
                         <div class="icon-title radius well">
-                            <h4>SharePoint</h4>
+                            <h4>ResumeSearch</h4>
                         </div>
-                    </div>*@
+                    </div>
                 </div>
              </div>
         </div>
